responsive issues fixed

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             class="flex lg:justify-between lg:flex-row flex-col-reverse lg:-mt-4 mt-16 relative"
           >
             <div
-              class="text-7xl md:text-8xl absolute xl:left-[37%] lg:left-[41%] lg:top-[30%] xl:top-[33%] left-[96%] top-[52%] -z-10 text-[#00000030]"
+              class="text-7xl md:text-8xl absolute xl:left-[37%] lg:left-[41%] md:top-[50%] lg:top-[25%] xl:top-[28.5%] left-[96%] top-[52%] -z-10 text-[#00000030]"
               data-aos="fade-right"
               data-aos-duration="500"
             >
