--- a/account.html
+++ b/account.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -255,7 +255,7 @@
               >
                 You can donate your credit to the scholarship pool.
               </p>
-              <div class="border-b-[0.5px] opacity-60 lg:w-3/5"></div>
+              <div class="border-b opacity-60 lg:w-3/5"></div>
               <p class="text-clr_blue_light text-xs font-semibold mt-4 mb-2">
                 PairTime will run the program in a transparent way in the near
                 Future.
