--- a/create-billing.html
+++ b/create-billing.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -240,7 +240,7 @@
               >
                 This information is visible to only you and the platform.
               </p>
-              <div class="border-b-[0.5px] opacity-60 lg:w-3/5"></div>
+              <div class="border-b opacity-60 lg:w-3/5"></div>
 
               <form class="lg:w-3/5 w-full">
                 <p class="text-clr_blue_light text-xs font-semibold mt-4 mb-5">
@@ -260,7 +260,7 @@
                     />
                     <div class="md:w-3/5 w-full relative">
                       <select
-                        class="py-3 px-3 rounded-lg text-xs w-full placeholder-primary"
+                        class="bg-white py-3 px-3 rounded-lg text-xs w-full placeholder-primary"
                       >
                         <option value="">United Arab Emirates</option>
                         <option value="">United States of America</option>
@@ -289,7 +289,7 @@
 
                   <div class="md:w-2/5 w-full relative">
                     <select
-                      class="py-3 px-3 rounded-lg text-xs w-full placeholder-primary"
+                      class="bg-white py-3 px-3 rounded-lg text-xs w-full placeholder-primary"
                     >
                       <option value="">Individual</option>
                       <option value="">Group</option>
