--- a/create-post.html
+++ b/create-post.html
@@ -71,7 +71,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -266,9 +266,7 @@
                   </button>
                 </div>
               </div>
-              <div
-                class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
-              ></div>
+              <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
               <form class="create-post-form pt-6 pb-16">
                 <div class="mb-4">
                   <label
@@ -341,7 +339,7 @@
                 </div>
 
                 <div
-                  class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
+                  class="border-bottom w-full border-b opacity-60 mt-5"
                 ></div>
 
                 <div class="xl:flex xl:justify-between pt-5 lg:pt-8">
@@ -380,7 +378,7 @@
                       </p>
 
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60"
+                        class="border-bottom w-full border-b opacity-60"
                       ></div>
 
                       <div class="flex justify-between pt-6 md:gap-5 gap-2">
@@ -455,7 +453,7 @@
                         Add recurring rule
                       </p>
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60"
+                        class="border-bottom w-full border-b opacity-60"
                       ></div>
                       <div class="pt-5 flex justify-between">
                         <div class="w-[37%]">
@@ -559,9 +557,7 @@
                   >
                     Post a Request
                   </p>
-                  <div
-                    class="border-bottom w-full border-b-[0.5px] opacity-60"
-                  ></div>
+                  <div class="border-bottom w-full border-b opacity-60"></div>
                   <div class="pt-7 md:flex md:justify-between">
                     <div class="md:w-[49%] mb-4 md:mb-0">
                       <p class="text-clr_blue_light text-xs font-semibold pb-2">
@@ -592,7 +588,7 @@
                     Budget
                   </p>
                   <div
-                    class="border-bottom w-full lg:w-3/5 border-b-[0.5px] opacity-60"
+                    class="border-bottom w-full lg:w-3/5 border-b opacity-60"
                   ></div>
                   <div class="pt-5 flex justify-between">
                     <p class="text-clr_blue_light text-xs font-semibold pb-5">
