--- a/dashboard-update.html
+++ b/dashboard-update.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -264,18 +264,23 @@
                   <p class="text-xs font-light mb-2">
                     Your pair's hourly rate is EUR 0.00
                   </p>
-                  <button
-                    class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                  >
-                    <a href="./goto-meeting.html"> Go to meeting details </a>
-                  </button>
+
+                  <a href="./goto-meeting.html">
+                    <button
+                      class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                    >
+                      Go to meeting details
+                    </button>
+                  </a>
                 </div>
 
-                <button
-                  class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                >
-                  <a href=""> Show More </a>
-                </button>
+                <a href="">
+                  <button
+                    class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                  >
+                    Show More
+                  </button>
+                </a>
               </div>
 
               <div class="w-[18.3rem] text-center mb-14 lg:mb-0">
@@ -285,26 +290,30 @@
                 <div class="bg-white px-3 py-6 rounded-lg mt-4 mb-6">
                   <p class="text-xs font-semibold mb-4">My open posts</p>
 
-                  <button
-                    class="bg-clr_blue w-[90%] text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                  >
-                    <a href=""> Scala type level programming </a>
-                  </button>
+                  <a href="">
+                    <button
+                      class="bg-clr_blue w-[90%] text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                    >
+                      Scala type level programming
+                    </button>
+                  </a>
                 </div>
 
-                <button
-                  class="bg-clr_blue w-[90%] text-xs py-2 px-5 mb-8 text-white rounded-xl hover:shadow-btn font-semibold"
-                >
-                  <a href="">
+                <a href="">
+                  <button
+                    class="bg-clr_blue w-[90%] text-xs py-2 px-5 mb-8 text-white rounded-xl hover:shadow-btn font-semibold"
+                  >
                     how to redirect to an external URL in Korolev app
-                  </a>
-                </button>
+                  </button>
+                </a>
 
-                <button
-                  class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                >
-                  <a href=""> Show More </a>
-                </button>
+                <a href="">
+                  <button
+                    class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                  >
+                    Show More
+                  </button>
+                </a>
               </div>
 
               <div
@@ -322,18 +331,23 @@
                   <p class="text-xs font-light mb-2">
                     Your pair's hourly rate is EUR 0.00
                   </p>
-                  <button
-                    class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                  >
-                    <a href="./goto-meeting.html"> Go to meeting details </a>
-                  </button>
+
+                  <a href="./goto-meeting.html">
+                    <button
+                      class="bg-clr_blue w-[90%] text-xs py-2 px-5 mt-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                    >
+                      Go to meeting details
+                    </button>
+                  </a>
                 </div>
 
-                <button
-                  class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
-                >
-                  <a href=""> Show More </a>
-                </button>
+                <a href="">
+                  <button
+                    class="bg-clr_blue text-xs py-2 px-5 text-white rounded-xl hover:shadow-btn font-semibold"
+                  >
+                    Show More
+                  </button>
+                </a>
               </div>
             </div>
           </div>
