--- a/goto-meeting.html
+++ b/goto-meeting.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -413,15 +413,17 @@
                   class="bg-white xl:w-4/6 lg:w-[52%] px-3 py-4 flex flex-col rounded-lg"
                 >
                   <div
-                    class="flex justify-between gap-4 items-center mb-3 px-3"
+                    class="flex justify-between flex-wrap gap-1 items-center mb-3 px-3"
                   >
                     <h4
                       class="sm:text-sm text-xs text-clr_blue_light font-semibold"
                     >
                       I have tried thing like
                     </h4>
-                    <h5 class="flex text-xs text-clr_blue_light font-semibold">
-                      tags: &nbsp;
+                    <h5 class="flex text-xs">
+                      <span class="text-clr_blue_light font-semibold"
+                        >tags: &nbsp;
+                      </span>
                       <p>
                         <span class="text-[#ff1d1d]">scala</span>,
                         <span class="text-[#ff1d1d]">korolev</span>,
