--- a/live-request-field.html
+++ b/live-request-field.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -258,7 +258,7 @@
                 </div>
               </div>
 
-              <div class="border-b-[0.5px] opacity-60 mt-2 mb-6"></div>
+              <div class="border-b opacity-60 mt-2 mb-6"></div>
 
               <section class="grid gap-y-3 relative md:z-50">
                 <div
