--- a/live-request-field_details.html
+++ b/live-request-field_details.html
@@ -72,7 +72,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -239,9 +239,7 @@
                 </p>
               </div>
 
-              <div
-                class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
-              ></div>
+              <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
 
               <div class="request-detail-container pt-6 pb-16">
                 <div class="lg:flex lg:justify-between gap-4">
@@ -249,7 +247,7 @@
                     class="bg-white h-[27rem] lg:w-4/6 px-3 py-4 flex flex-col rounded-lg mb-6 lg:mb-0"
                   >
                     <div
-                      class="flex justify-between items-center gap-4 px-3 mb-3"
+                      class="flex justify-between flex-wrap items-center gap-1 px-3 mb-3"
                     >
                       <h4
                         class="text-xs sm:text-sm text-clr_blue_light font-semibold"
@@ -300,7 +298,7 @@
                         </div>
                       </div>
 
-                      <div class="border-b-[0.5px] opacity-60 mt-2 mb-6"></div>
+                      <div class="border-b opacity-60 mt-2 mb-6"></div>
 
                       <p
                         class="flex justify-between text-xs font-medium capitalize mb-4"
@@ -370,7 +368,7 @@
                 </div>
 
                 <div
-                  class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
+                  class="border-bottom w-full border-b opacity-60 mt-5"
                 ></div>
 
                 <div class="pt-4 lg:pt-8">
