--- a/live-request.html
+++ b/live-request.html
@@ -68,7 +68,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -244,7 +244,7 @@
                 </div>
               </div>
 
-              <div class="border-b-[0.5px] opacity-60 mt-4 md:mt-2 mb-6"></div>
+              <div class="border-b opacity-60 mt-4 md:mt-2 mb-6"></div>
 
               <div
                 class="xl:w-[54.5rem] mx-auto flex flex-wrap justify-center xl:justify-start gap-3"
