--- a/search-detail.html
+++ b/search-detail.html
@@ -73,7 +73,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -250,9 +250,7 @@
                   <a> Preview </a>
                 </button>
               </div>
-              <div
-                class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
-              ></div>
+              <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
 
               <div class="w-full lg:flex lg:justify-between gap-6 mt-6">
                 <div class="w-full lg:w-[61%] mb-8 lg:mb-0">
@@ -389,11 +387,11 @@
                 </div>
 
                 <div
-                  class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
+                  class="border-bottom w-full border-b opacity-60 mt-5"
                 ></div>
 
                 <div class="lg:flex lg:justify-between gap-6 pt-5 lg:pt-8">
-                  <div class="schedular w-full lg:w-[61%]">
+                  <div class="schedular lg:w-[61%]">
                     <div
                       class="schedular-calendar h-full"
                       id="schedular-calendar"
@@ -432,7 +430,7 @@
                         </button>
                       </p>
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60"
+                        class="border-bottom w-full border-b opacity-60"
                       ></div>
 
                       <p class="text-xs my-5">
@@ -445,14 +443,14 @@
                         <div class="flex gap-2 mt-3">
                           <div class="w-[5rem] relative">
                             <select
-                              class="py-3 px-3 rounded-lg text-xs text-[#191453] w-full appearance-none border border-[#F7F8FB] shadow-input_two"
+                              class="bg-white py-3 px-2 rounded-lg text-xs text-[#191453] w-full appearance-none border border-[#F7F8FB] shadow-input_two"
                             >
                               <option>Eur</option>
                               <option>USD</option>
                               <option>CAD</option>
                             </select>
                             <span
-                              class="drop-icon absolute right-[2%] top-[12%] bg-white px-3 pointer-events-none"
+                              class="drop-icon absolute right-[2%] top-[12%] bg-white px-2 pointer-events-none"
                             >
                               <i class="fas fa-sort-down text-sm"></i>
                             </span>
@@ -495,9 +493,7 @@
           </figure>
 
           <h4 class="text-sm font-semibold">no title yet</h4>
-          <div
-            class="border-bottom w-full border-b-[0.5px] opacity-60 my-5"
-          ></div>
+          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
           <p class="flex-1 text-xs">no content yet</p>
           <button
             class="bg-clr_blue text-xs py-2 px-3 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto self-center"
