--- a/service-profile.html
+++ b/service-profile.html
@@ -71,7 +71,7 @@
             </div>
 
             <div
-              class="border-bottom w-full border-b-[0.5px] opacity-60 mb-6 hidden md:block"
+              class="border-bottom w-full border-b opacity-60 mb-6 hidden md:block"
             ></div>
 
             <ul class="flex-1 flex flex-col">
@@ -97,7 +97,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[93%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-2 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[95%]"
                   >
                     <img
                       src="./utils/images/icon-11.svg"
@@ -252,9 +252,7 @@
                   questions.
                 </p>
               </div>
-              <div
-                class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
-              ></div>
+              <div class="border-bottom w-full border-b opacity-60 mt-2"></div>
               <div class="create-post-form pt-6 pb-16">
                 <div class="mb-8">
                   <p
@@ -263,7 +261,7 @@
                     Visibility & Approachability
                   </p>
                   <fieldset class="mt-6 ml-0 md:ml-7">
-                    <div class="flex items-center">
+                    <div class="flex">
                       <input
                         type="radio"
                         class="radio-style"
@@ -271,14 +269,14 @@
                         value="track"
                         name="User Bio"
                       /><label
-                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2"
+                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2 -mt-1"
                         for="track"
                         >Allow your user name and bio to be found by other users
                         via searching and browsing. Your hourly rates will be
                         visible too.</label
                       >
                     </div>
-                    <div class="mt-5 flex items-center">
+                    <div class="mt-5 flex">
                       <input
                         type="radio"
                         class="radio-style"
@@ -286,7 +284,7 @@
                         value="event"
                         name="User Bio"
                       /><label
-                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2"
+                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2 -mt-1"
                         for="event"
                         >Allow other users to send you direct messages. This
                         only works when you allow your user name and bio to be
@@ -327,7 +325,7 @@
                 </div>
 
                 <div
-                  class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
+                  class="border-bottom w-full border-b opacity-60 mt-5"
                 ></div>
 
                 <div class="xl:flex xl:justify-between pt-5 lg:pt-8">
@@ -367,7 +365,7 @@
                       </p>
 
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60"
+                        class="border-bottom w-full border-b opacity-60"
                       ></div>
 
                       <div class="flex justify-between pt-6 md:gap-5 gap-2">
@@ -442,7 +440,7 @@
                         Add recurring rule
                       </p>
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60"
+                        class="border-bottom w-full border-b opacity-60"
                       ></div>
                       <div class="pt-5 flex justify-between">
                         <div class="w-[37%]">
@@ -541,7 +539,7 @@
                   </div>
                 </div>
 
-                <div class="flex items-center mt-8">
+                <div class="flex mt-8">
                   <input
                     type="radio"
                     class="radio-style"
@@ -549,7 +547,7 @@
                     value="track"
                     name="User Bio"
                   /><label
-                    class="text-clr_blue_light text-xs font-semibold ml-2"
+                    class="text-clr_blue_light text-xs font-semibold ml-2 -mt-1"
                     for="track"
                     >restrict service request feed to requests that strictly
                     match your availability</label
@@ -565,7 +563,7 @@
                         Duration Preferences
                       </p>
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
+                        class="border-bottom w-full border-b opacity-60 mt-2"
                       ></div>
                       <div class="pt-6">
                         <div>
@@ -616,7 +614,7 @@
                         Duration Preferences
                       </p>
                       <div
-                        class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
+                        class="border-bottom w-full border-b opacity-60 mt-2"
                       ></div>
                       <div class="pt-6">
                         <div>
@@ -714,7 +712,7 @@
                       Topics to subscribe
                     </p>
                     <div
-                      class="border-bottom w-full border-b-[0.5px] opacity-60 mt-2"
+                      class="border-bottom w-full border-b opacity-60 mt-2"
                     ></div>
                     <div class="mt-5">
                       <div>
