--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
     <main class="min-h-screen bg-[#F7F8FB] overflow-hidden">
       <div class="flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
+          class="h-screen -left-full z-50 w-full bg-[#00000080] fixed top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -36,7 +36,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="/">
+              <a href="./dashboard.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -166,7 +166,7 @@
               class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/" class="md:hidden">
+                <a href="./dashboard.html" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -232,7 +232,10 @@
 
             <div class="center pt-5 lg:pt-2 pb-8">
               <p class="text-clr_blue_light font-light text-xs lg:text-sm">
-                PairTime <span class="font-bold">></span> Account
+                <a href="./dashboard.html" class="hover:text-clr_blue"
+                  >PairTime</a
+                >
+                <span class="font-bold">></span> Account
               </p>
               <p
                 class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4"
@@ -276,7 +279,7 @@
           </div>
 
           <div
-            class="hidden md:block bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
+            class="hidden lg:block bg-[#F48C06] w-24 h-24 absolute bottom-40 -right-10 rounded-full animtaion-infinite"
           ></div>
         </section>
       </div>
