--- a/create-post.html
+++ b/create-post.html
@@ -16,6 +16,7 @@
 
     <script src="./utils/js/fullCalendar/main.js" defer></script>
     <script src="./utils/js/calendar.js" defer></script>
+    <script src="./utils/js/createPost.js" defer></script>
     <script src="./utils/js/dashboard.js" defer></script>
 
     <title>Create a post</title>
@@ -25,7 +26,7 @@
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
+          class="h-screen -left-full z-50 w-full bg-[#00000080] fixed top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -39,7 +40,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="/">
+              <a href="./dashboard.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -81,7 +82,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-3 hover:shadow-btn w-[90%]"
                   >
                     <img
                       src="./utils/images/icon-10.svg"
@@ -172,7 +173,7 @@
               class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/" class="md:hidden">
+                <a href="./dashboard.html" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -236,9 +237,12 @@
               </div>
             </div>
 
-            <div class="center pt-5 lg:pt-2 h-full pb-8">
+            <div class="center pt-5 lg:pt-2 h-full pb-8 relative z-30">
               <p class="text-clr_blue_light font-light text-xs lg:text-sm">
-                PairTime <span class="font-bold">></span> Post a request
+                <a href="./dashboard.html" class="hover:text-clr_blue"
+                  >PairTime</a
+                >
+                <span class="font-bold">></span> Post a request
               </p>
 
               <div class="md:flex md:justify-between md:items-center">
@@ -251,18 +255,23 @@
                 <div class="flex gap-2">
                   <button
                     class="flex-1 text-[#A6A6A6] bg-[#ECECEC] text-sm py-2 px-5 rounded-2xl font-semibold hover:shadow-btn"
+                    id="cancel-btn"
                   >
-                    <a> Cancel </a>
+                    Cancel
                   </button>
+
                   <button
                     class="flex-1 text-clr_blue bg-transparent text-sm py-2 px-5 rounded-2xl border-2 border-blue-700 hover:shadow-btn font-semibold"
+                    id="preview-btn"
                   >
-                    <a> Preview </a>
+                    Preview
                   </button>
+
                   <button
                     class="flex-1 bg-clr_blue text-sm py-2 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    id="post-btn"
                   >
-                    <a> Post </a>
+                    Post
                   </button>
                 </div>
               </div>
@@ -276,7 +285,8 @@
                   <input
                     type="text"
                     placeholder="Upto 140 Characters"
-                    class="placeholder:text-clr_gray_light placeholder:text-xs w-full px-3 py-3 rounded-lg"
+                    class="placeholder:text-clr_gray_light placeholder:text-xs w-full px-3 py-3 rounded-lg text-xs"
+                    id="title-input"
                   />
                 </div>
                 <div class="mb-4">
@@ -288,6 +298,7 @@
                     class="placeholder:text-clr_blue_light w-full px-3 py-3 text-xs font-normal rounded-lg"
                     rows="6"
                     placeholder="Markdown supported"
+                    id="textarea"
                   ></textarea>
                 </div>
                 <div class="mb-4">
@@ -298,15 +309,72 @@
                   <input
                     type="text"
                     placeholder="comma-sparated"
-                    class="placeholder:text-clr_gray_light placeholder:text-xs w-full px-3 py-3 rounded-lg"
+                    class="placeholder:text-clr_gray_light placeholder:text-xs w-full px-3 py-3 rounded-lg text-xs"
+                    id="tag-input"
                   />
                 </div>
                 <p class="text-xs font-semibold text-clr_blue_light pb-2">
                   Recommended Tags:
-                  <span class="text-clr_gray_light ml-3"
+                  <!-- <span class="text-clr_gray_light ml-3"
                     >No predicitions yet</span
-                  >
+                  > -->
                 </p>
+                <div class="tag-btns" id="tag-btns">
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold mb-2 mb-md-0"
+                    type="button"
+                  >
+                    javascript
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    java
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    jquery
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    html
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    arrays
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    css
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    php
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    c
+                  </button>
+                  <button
+                    class="tag-btn flex-1 bg-clr_blue text-sm py-2 px-3 text-white rounded-lg hover:shadow-btn font-semibold"
+                    type="button"
+                  >
+                    form
+                  </button>
+                </div>
 
                 <div class="md:flex items-center pt-7">
                   <p
@@ -426,7 +494,7 @@
                           <p
                             class="text-clr_blue_light text-xs font-semibold mb-3"
                           >
-                            Start Time:
+                            End Time:
                           </p>
                           <div
                             class="relative w-[8rem] md:w-[9rem] shadow-input"
@@ -581,7 +649,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mt-12">
+                <div class="mt-12 relative z-50">
                   <p
                     class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 pb-5 flex-1"
                   >
@@ -608,11 +676,147 @@
           </div>
 
           <div
-            class="half-circle bg-[#F48C06] w-24 h-24 fixed top-[50%] -right-20 lg:-right-20 rounded-full animtaion-infinite"
+            class="half-circle hidden lg:block bg-[#F48C06] w-24 h-24 fixed top-[50%] -right-20 rounded-full animtaion-infinite"
           ></div>
         </section>
       </div>
+
+      <!-- Post Btn Click Modal -->
+      <section
+        class="modal bg-[#00000050] flex justify-center items-center h-[100vh] fixed inset-0 z-50 opacity-0 transition-all ease-linear pointer-events-none"
+        id="post-modal"
+      >
+        <div
+          class="container bg-white md:w-3/5 w-[98%] rounded-lg px-2 sm:px-5 py-5 flex flex-col relative"
+        >
+          <figure
+            class="absolute right-4 top-3 h-4 w-4 flex justify-center items-center rounded-full bg-red-600 cursor-pointer"
+          >
+            <img
+              src="./utils/images/cross-sign.png"
+              alt="Cross Sign"
+              loading="lazy"
+              id="cross-btn"
+            />
+          </figure>
+
+          <h4 class="text-sm font-semibold">
+            We successfully processed your post!
+          </h4>
+          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
+          <p class="text-xs font-semibold">
+            You can share this post publicly with this link:
+          </p>
+
+          <div class="flex justify-between gap-2 sm:gap-4 mt-5 mb-7">
+            <input
+              type="text"
+              class="flex-1 px-5 py-4 border border-[#f7f8fb] rounded-lg shadow-input_two"
+              id="copy-input"
+              readonly
+            />
+            <button
+              class="border border-[#f7f8fb] rounded-lg px-3 sm:px-5 py-4 shadow-input_two relative"
+              id="copy-post-link-btn"
+            >
+              <span
+                class="opacity-0 transition-all ease-in absolute -top-6 left-0 text-sm"
+                id="copied-message"
+                >copied</span
+              >
+              <img
+                src="./utils/images/files.svg"
+                alt="Two files on top of each other"
+                loading="lazy"
+              />
+            </button>
+          </div>
+
+          <div class="btns flex justify-between gap-2">
+            <button
+              class="bg-clr_blue text-xs py-2 px-5 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
+              id="post-another-btn"
+            >
+              Post another one
+            </button>
+
+            <a href="/dashboard.html" class="w-full sm:w-auto">
+              <button
+                class="bg-clr_blue text-xs py-2 px-5 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto"
+              >
+                Go To Home
+              </button>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Preview Button Click Modal Open -->
+      <section
+        class="modal bg-[#00000050] flex justify-center items-center h-[100vh] fixed inset-0 z-50 opacity-0 pointer-events-none transition-all ease-linear"
+        id="preview-modal"
+      >
+        <div
+          class="container bg-white md:w-3/5 w-[95%] h-3/5 rounded-lg px-6 py-5 flex flex-col relative"
+        >
+          <figure
+            class="absolute right-4 top-3 h-4 w-4 flex justify-center items-center rounded-full bg-red-600 cursor-pointer"
+            id="preview-cross-btn"
+          >
+            <img
+              src="./utils/images/cross-sign.png"
+              alt="Cross Sign"
+              loading="lazy"
+            />
+          </figure>
+
+          <h4 class="text-sm font-semibold" id="preview-title">no title yet</h4>
+          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
+          <p
+            class="preview-content flex-1 text-xs overflow-y-auto pr-1"
+            id="preview-content"
+          >
+            no content yet
+          </p>
+          <p class="text-xs my-2" id="preview-tags"></p>
+          <button
+            class="bg-clr_blue text-xs py-2 px-3 text-white font-semibold rounded-lg hover:shadow-btn w-full sm:w-auto self-center"
+            id="preview-close-btn"
+          >
+            close
+          </button>
+        </div>
+      </section>
     </main>
+
+    <!-- date event popup -->
+    <!-- <div
+      id="date-popup"
+      class="flex justify-center items-center h-screen fixed inset-0 z-[50] opacity-0 pointer-events-none"
+    >
+      <div
+        class="h-[20rem] w-[20rem] bg-white p-8 rounded-lg border-blue-800 border-2"
+      >
+        <label class="text-sm">Enter Start Time</label>
+        <input
+          type="type"
+          id="date-start-input"
+          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
+        />
+        <label class="text-sm">Enter End Time</label>
+        <input
+          type="type"
+          id="date-end-input"
+          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
+        />
+        <button
+          id="date-btn"
+          class="text-sm bg-clr_blue text-white px-4 py-2 rounded-lg mt-3 w-full"
+        >
+          Add
+        </button>
+      </div> -->
+    </div>
 
     <script>
       tailwind.config = {
@@ -627,6 +831,7 @@
               clr_blue: "#250CED",
               clr_blue_light: "#191453",
               clr_gray_light: "#5A5881",
+              clr_dark: "#34221d",
             },
             placeholderColor: {
               primary: "#5A5881",
