--- a/live-request-field.html
+++ b/live-request-field.html
@@ -22,7 +22,7 @@
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
+          class="h-screen -left-full z-50 w-full bg-[#00000080] fixed top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -36,7 +36,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="/">
+              <a href="./dashboard.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -176,7 +176,7 @@
               class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/" class="md:hidden">
+                <a href="./dashboard.html" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -232,7 +232,13 @@
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
               <p class="text-clr_blue_light font-light text-xs lg:text-sm">
-                PairTime <span class="font-bold">></span> Live requests
+                <a href="./dashboard.html" class="hover:text-clr_blue"
+                  >PairTime</a
+                >
+                <span class="font-bold">></span>
+                <a href="./live-request.html" class="hover:text-clr_blue"
+                  >Live Requests</a
+                >
                 <span class="font-bold">></span> ios
               </p>
               <div
@@ -290,7 +296,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -327,7 +333,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -364,7 +370,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -401,7 +407,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -438,7 +444,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -475,7 +481,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
@@ -512,7 +518,7 @@
                       </p>
                     </div>
                     <a
-                      href="./live-request-field_details.html"
+                      href="./live-request-field-details.html"
                       class="bg-clr_blue text-sm py-2 px-4 text-white font-semibold rounded-lg hover:shadow-btn"
                     >
                       View Details
