--- a/live-request.html
+++ b/live-request.html
@@ -22,7 +22,7 @@
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
+          class="h-screen -left-full z-50 w-full bg-[#00000080] fixed top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -36,7 +36,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="/">
+              <a href="./dashboard.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -165,7 +165,7 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/" class="md:hidden">
+                <a href="./dashboard.html" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -221,7 +221,10 @@
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
               <p class="text-clr_blue_light font-light text-xs lg:text-sm">
-                PairTime <span class="font-bold">></span> Live requests
+                <a href="./dashboard.html" class="hover:text-clr_blue"
+                  >PairTime</a
+                >
+                <span class="font-bold">></span> Live requests
               </p>
               <div class="md:flex md:justify-between items-center mt-4 md:mt-0">
                 <p
@@ -247,7 +250,7 @@
               <div class="border-b opacity-60 mt-4 md:mt-2 mb-6"></div>
 
               <div
-                class="xl:w-[54.5rem] mx-auto flex flex-wrap justify-center xl:justify-start gap-3"
+                class="xl:w-[54.5rem] mx-auto flex flex-wrap justify-center xl:justify-start gap-3 relative z-10"
               >
                 <a
                   href="./live-request-field.html"
