--- a/service-profile.html
+++ b/service-profile.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="./utils/css/fullCalendar/main.min.css" />
     <link rel="stylesheet" href="./utils/css/styles.css" />
 
+    <!-- Script files -->
     <script src="./utils/js/fullCalendar/main.js" defer></script>
     <script src="./utils/js/calendar.js" defer></script>
+    <script src="./utils/js/serviceProfile.js" defer></script>
     <script src="./utils/js/dashboard.js" defer></script>
 
     <title>Service Profile - Dashboard</title>
@@ -25,7 +27,7 @@
     <main class="bg-[#F7F8FB] overflow-hidden">
       <div class="h-full flex">
         <aside
-          class="h-screen absolute top-0 -left-full z-50 w-full bg-[#00000080] md:fixed md:top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
+          class="h-screen -left-full z-50 w-full bg-[#00000080] fixed top-0 md:left-0 md:w-[12rem] lg:w-64 transition-all ease-in"
           id="sidebar"
         >
           <button
@@ -39,7 +41,7 @@
             class="w-[70%] bg-white h-full flex flex-col rounded-r-2xl shadow-btn md:shadow-none md:w-full pr-5 md:pr-1 md:rounded-none"
           >
             <div class="flex justify-between items-center">
-              <a href="/">
+              <a href="./dashboard.html">
                 <figure class="w-full px-3 py-6">
                   <img
                     src="./utils/images/pair-time.svg"
@@ -97,7 +99,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-2 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[95%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex text-left items-center lg:py-3 py-2 lg:px-2 px-2 ml-3 rounded-xl gap-3 hover:shadow-btn w-[93%]"
                   >
                     <img
                       src="./utils/images/icon-11.svg"
@@ -172,7 +174,7 @@
               class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/" class="md:hidden">
+                <a href="./dashboard.html" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
@@ -236,9 +238,12 @@
               </div>
             </div>
 
-            <div class="center pt-5 lg:pt-2 h-full">
+            <div class="center pt-5 lg:pt-2 h-full relative z-30">
               <p class="text-clr_blue_light font-light text-xs lg:text-sm">
-                PairTime <span class="font-bold">></span> Service Profile
+                <a href="./dashboard.html" class="hover:text-clr_blue"
+                  >PairTime</a
+                >
+                <span class="font-bold">></span> Service Profile
               </p>
 
               <div class="mb-6">
@@ -413,7 +418,7 @@
                           <p
                             class="text-clr_blue_light text-xs font-semibold mb-3"
                           >
-                            Start Time:
+                            End Time:
                           </p>
                           <div
                             class="relative w-[8rem] md:w-[9rem] shadow-input"
@@ -735,6 +740,7 @@
                     <div class="text-center lg:text-right mt-10">
                       <button
                         class="w-full md:w-auto bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                        id="submit-btn"
                       >
                         Submit
                       </button>
@@ -746,11 +752,107 @@
           </div>
 
           <div
-            class="half-circle bg-[#F48C06] w-24 h-24 fixed top-[50%] -right-20 lg:-right-20 rounded-full animtaion-infinite"
+            class="half-circle hidden lg:block bg-[#F48C06] w-24 h-24 fixed top-[50%] -right-20 lg:-right-20 rounded-full animtaion-infinite"
           ></div>
         </section>
       </div>
+
+      <!-- Offer Modal -->
+      <section
+        class="modal bg-[#00000050] flex justify-center items-center h-[100vh] fixed inset-0 z-50 opacity-0 pointer-events-none transition-all ease-linear"
+        id="submit-btn-modal"
+      >
+        <div
+          class="container bg-white md:w-2/4 w-[98%] rounded-lg px-2 sm:px-5 py-5 flex flex-col relative"
+        >
+          <figure
+            class="absolute right-4 top-3 h-4 w-4 flex justify-center items-center rounded-full bg-red-600 cursor-pointer"
+          >
+            <img
+              src="./utils/images/cross-sign.png"
+              alt="Cross Sign"
+              loading="lazy"
+              id="offer-cross-btn"
+            />
+          </figure>
+
+          <h4 class="text-sm font-semibold">Offer 1</h4>
+          <div class="border-bottom w-full border-b opacity-60 my-5"></div>
+
+          <div class="content grid gap-3 mb-8">
+            <p class="text-[13px] flex justify-between items-center">
+              Introduction: <span class="font-semibold">Test Description</span>
+            </p>
+
+            <p class="text-[13px] flex justify-between items-center">
+              Meeting Start Time:
+              <span class="font-semibold">2022-03-8 (20:45) [UTC]</span>
+            </p>
+
+            <p class="text-[13px] flex justify-between items-center">
+              Meeting Time: <span class="font-semibold">60 minutes</span>
+            </p>
+
+            <p class="text-[13px] flex justify-between items-center">
+              Hourly rate: <span class="font-semibold">60.00 EUR</span>
+            </p>
+          </div>
+
+          <div
+            class="btns lg:flex justify-between items-center gap-2 mt-2 md:mt-0"
+          >
+            <div class="flex gap-2">
+              <img
+                src="./utils/images/not-acceptable.svg"
+                alt="Not Acceptable Sign"
+                loading="lazy"
+                class="h-3 w-3"
+              />
+              <p class="text-xs">
+                As an unverified user, you must have at least EUR 30.00 credit
+                in your balae to accept this offer.
+              </p>
+            </div>
+
+            <button
+              class="min-w-max bg-clr_blue text-xs py-2 px-6 text-white font-semibold rounded-lg hover:shadow-btn w-full lg:w-auto mt-4 lg:mt-0"
+              id="close-btn"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <!-- date event popup -->
+    <!-- <div
+      id="date-popup"
+      class="flex justify-center items-center h-screen fixed inset-0 z-[50] opacity-0 pointer-events-none"
+    >
+      <div
+        class="h-[20rem] w-[20rem] bg-white p-8 rounded-lg border-blue-800 border-2"
+      >
+        <label class="text-sm">Enter Start Time</label>
+        <input
+          type="type"
+          id="date-start-input"
+          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
+        />
+        <label class="text-sm">Enter End Time</label>
+        <input
+          type="type"
+          id="date-end-input"
+          class="rounded-md h-[2rem] mb-3 w-full p-3 bg-[#F7F8FB]"
+        />
+        <button
+          id="date-btn"
+          class="text-sm bg-clr_blue text-white px-4 py-2 rounded-lg mt-3 w-full"
+        >
+          Add
+        </button>
+      </div>
+    </div> -->
 
     <script>
       tailwind.config = {
